# abd-skills

./: .abd-deploy-state.json  .abd-deploy.json  .gitignore  AGENTS.md  ENCODING-GUARD-REPORT.md  README.md  VERSION  _patch_story_mapping.py  _t.py  abd-skills.code-workspace  build.py  change.txt  corrections-log.md  idea-shaping-questions.md  make_viewers.py  migrated-to-plugin.md  package-lock.json  pytest.ini  skill-config.json  skills-lock.json  skills.sh  ti do.md  to do.md
abd-pet-store-class/: requirements-chat-with-product-owner.md
agentic-skill-builder/: .gitignore  README.md  Untitled  pyproject.toml
agentic-skill-builder/.cursor/rules/: slack-notify-after-work.mdc
agentic-skill-builder/conf/: README.md  expert_rubric.yaml
agentic-skill-builder/docs/: README.md
agentic-skill-builder/docs/development/: python-environment.md
agentic-skill-builder/docs/plans/: langgraph-agentic-orchestration-plan.md
agentic-skill-builder/docs/templates/: build-strategy.example.json  build-strategy.example.md
agentic-skill-builder/fixtures/: README.md
agentic-skill-builder/requirements/: README.md
agentic-skill-builder/scripts/: diagnose_connectivity.py  notify_slack.py
agentic-skill-builder/src/agentic_skill_builder/: __init__.py  __main__.py  cli.py  expert.py  graph.py  operator.py  pipeline_slack.py  slack_notify.py  state.py  strategize.py
agentic-skill-builder/test/: conftest.py  test_cli_resume.py  test_graph.py  test_operator.py  test_slack_notify.py  test_strategize.py
catalog/: UX.drawio  agents.html  index.html  instructions.html  outline.md  (+3 more)
(+5085 files in other folders)
