[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-skill-builder"
version = "0.1.0"
description = "Agentic skill builder — LangGraph orchestration for Agile by Design skill authoring."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=1.0",
  "langgraph-checkpoint-sqlite>=3.0",
  "openai>=1.40",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
agentic-skill-builder = "agentic_skill_builder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]

[tool.ruff]
line-length = 100
target-version = "py311"
